# jingying_model_agent

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  Makefile  README.md  agent.py  pyproject.toml  requirements.txt
configs/: evaluate.example.yml  feature_select.example.yml  project.example.yml  report.example.yml  sample.example.yml  train.example.yml
doc/: AI经营建模Agent规划.md  现有经营模型梳理.md
docs/: architecture.md  data_and_sql_policy.md  evaluation_standard.md  feature_selection_standard.md  glossary.md  model_request_builder_support_audit.md  modeling_standard.md  project_workspace_standard.md  report_standard.md  request_driven_workflow.md  workbench_rules.yml  workflow_standard.md
jingying_agent/: __init__.py  batch_feature_select.py  cli.py  dp_feather.py  feature_metadata.py  feature_refine.py  feature_screening.py  project.py  wide_sql.py
schemas/: execution_plan.schema.yml  model_request.schema.yml
tests/: test_auditors_facts_context.py  test_cli_retry.py  test_cli_smoke.py  test_config.py  test_data_pull_engine.py  test_evaluation_intent_psi.py  test_feature_intake_plan.py  test_feature_pipeline_flow.py  test_feature_refine_d03.py  test_gcard_decoupling.py  test_harness_hardening.py  test_harness_registry.py  test_harness_runtime.py  test_local_feather_profile.py  test_metrics.py  test_progress.py  test_project_continuity.py  test_project_schema.py  test_rename_compatibility.py  test_report_render.py  test_request_driven_cli_flow.py  test_request_materialize.py  test_request_plan.py  test_resource_planning.py  test_resource_usage.py  test_run_evidence.py  test_sample_check.py  test_sql_evidence.py  test_table_profile.py  (+2 more)
(+783 files in other folders)
