[project]
name = "risk-model-workbench"
version = "0.1.0"
description = "Risk scenario AI modeling workbench."
requires-python = ">=3.9"
dependencies = [
  "pyyaml>=6.0",
]

[project.optional-dependencies]
modeling = [
  "pandas",
  "pyarrow",
  "scikit-learn",
  "lightgbm",
  "xgboost",
  "jinja2",
  "matplotlib",
]

[project.scripts]
rmw = "risk_model_workbench.cli:main"
jm = "risk_model_workbench.cli:main"
jingying-agent = "risk_model_workbench.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
